--- a/src/index.css
+++ b/src/index.css
@@ -220,7 +220,7 @@
     transform-origin: bottom right;
     transform: rotateZ(15deg);
     will-change: transform;
-    box-shadow: 16px 0 40px #c3c1c1;
+    box-shadow: 16px 0 40px #e4e4e4;
   }
 
   .block-container .btn-back-red {
