--- a/src/index.css
+++ b/src/index.css
@@ -89,6 +89,7 @@
 
   .about-btn {
     @apply
+      flex items-center
       text-white
       bg-black
       focus:ring-4 focus:outline-none focus:ring-gray-300
